update:  region 实例列表代码优化
